[Webcodecs] Fix markdown typos for definition lists
Trailing `</dt>` has nothing to do here and now makes Bikeshed generate invalid
HTML markup.

--- a/index.src.html
+++ b/index.src.html
@@ -2219,7 +2219,7 @@ enum EncodedAudioChunkType {
 </xmp>
 
 ### Internal Slots ### {#encodedaudiochunk-internal-slots}
-: <dfn attribute for=EncodedAudioChunk>[[internal data]]</dfn></dt>
+: <dfn attribute for=EncodedAudioChunk>[[internal data]]</dfn>
 :: An array of bytes representing the encoded chunk data.
 : <dfn attribute for=EncodedAudioChunk>\[[type]]</dfn>
 :: Describes whether the chunk is a [=key chunk=].
@@ -2291,7 +2291,7 @@ enum EncodedVideoChunkType {
 </xmp>
 
 ### Internal Slots ### {#encodedvideochunk-internal-slots}
-: <dfn attribute for=EncodedVideoChunk>[[internal data]]</dfn></dt>
+: <dfn attribute for=EncodedVideoChunk>[[internal data]]</dfn>
 :: An array of bytes representing the encoded chunk data.
 : <dfn attribute for=EncodedVideoChunk>\[[type]]</dfn>
 :: The {{EncodedAudioChunkType}} of this {{EncodedVideoChunk}};
