Fix typo in processing loop

--- a/index.src.html
+++ b/index.src.html
@@ -255,7 +255,7 @@ and should remain in the [=control message queue=] to be retried later.
 
 To <dfn>Process the control message queue</dfn>, run these steps:
 1. While [=[[message queue blocked]]=] is `false` and
-    [=[[message queue blocked]]=] is `false`:
+    [=[[control message queue]]=] is not empty:
     1. Let |front message| be the first message in
         [=[[control message queue]]=].
     2. Let |outcome| be the result of running the [=control message steps=]
