Remove ImageTrack.onchange event.
We decided not to do this, but forgot to remove it from the spec. The fact that
decode() calls stall until the next frame is available and the availability of the
`completed` promise make it largely unnecessary.

Clients which don't want to wait for for `completed` can instead handle a
RangeError exception during decode() if no more frames remain. While not
ideal it's inefficient to implement something like onchange since common
formats like GIF would require us to attempt decode in order to update the
frame count.

--- a/index.src.html
+++ b/index.src.html
@@ -5023,11 +5023,10 @@ ImageTrack Interface {#imagetrack-interface}
 <pre class='idl'>
 <xmp>
 [Exposed=(Window,DedicatedWorker)]
-interface ImageTrack : EventTarget {
+interface ImageTrack {
   readonly attribute boolean animated;
   readonly attribute unsigned long frameCount;
   readonly attribute unrestricted float repetitionCount;
-  attribute EventHandler onchange;
   attribute boolean selected;
 };
 </xmp>
@@ -5072,10 +5071,6 @@ interface ImageTrack : EventTarget {
 :: The {{ImageTrack/repetitionCount}} getter steps are to return the value of
     {{ImageTrack/[[repetition count]]}}.
 
-: <dfn attribute for=ImageTrack>onchange</dfn>
-:: An [=event handler IDL attribute=] whose [=event handler event type=] is
-    {{ImageTrack/change}}.
-
 : <dfn attribute for=ImageTrack>selected</dfn>
 :: The {{ImageTrack/selected}} getter steps are to return the value of
     {{ImageTrack/[[selected]]}}.
@@ -5113,12 +5108,6 @@ interface ImageTrack : EventTarget {
         {{ImageDecoder/[[internal selected track index]]}}.
     2. Remove all entries from
         {{ImageDecoder/[[progressive frame generations]]}}.
-
-
-### Event Summary ### {#imagetracklist-eventsummary}
-
-: <dfn event for=ImageTrack>change</dfn>
-:: Fired at the {{ImageTrack}} when the {{ImageTrack/frameCount}} is altered.
 
 Resource Reclamation{#resource-reclamation}
 ==============================================
