Align event phrasing with DOM spec
see https://dom.spec.whatwg.org/#firing-events-example

--- a/index.src.html
+++ b/index.src.html
@@ -4682,7 +4682,7 @@ interface ImageDecoder {
                 {{ImageTrackList/[[track list]]}}.
             2. Assign `update.frameCount` to |updateTrack|'s
                 {{ImageTrack/[[frame count]]}}.
-            3. Fire a simple event named {{ImageTrack/change}} at the
+            3. [=Fire an event=] named {{ImageTrack/change}} at the
                 {{ImageDecoder/tracks}} object.
 
 : <dfn for=ImageDecoder>Decode Complete Frame</dfn> (with |frameIndex| and
