Add HEVC registration

--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -170,9 +170,14 @@ Video Codec Registry {#video-codec-registry}
     <td>[AV1 codec registration](https://www.w3.org/TR/webcodecs-av1-codec-registration/) [[WEBCODECS-AV1-CODEC-REGISTRATION]]</td>
   </tr>
   <tr>
-    <td>avc1.*</td>
+    <td>avc1.*, avc3.*</td>
     <td>AVC / H.264</td>
     <td>[AVC (H.264) WebCodecs Registration](https://www.w3.org/TR/webcodecs-avc-codec-registration/) [[WEBCODECS-AVC-CODEC-REGISTRATION]]</td>
+  </tr>
+  <tr>
+    <td>hev1.*, hvc1.*</td>
+    <td>HEVC / H.265</td>
+    <td>[HEVC (H.265) WebCodecs Registration](https://www.w3.org/TR/webcodecs-hevc-codec-registration/) [[WEBCODECS-HEVC-CODEC-REGISTRATION]]</td>
   </tr>
   <tr>
     <td>vp8</td>
