Fix H.264 biblio title

--- a/hevc_codec_registration.src.html
+++ b/hevc_codec_registration.src.html
@@ -55,7 +55,7 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
 {
   "ITU-T-REC-H.265": {
     "href": "https://www.itu.int/rec/T-REC-H.265",
-    "title": "H.264 : Advanced video coding for generic audiovisual services",
+    "title": "H.265 : High efficiency video coding",
     "publisher": "ITU",
     "date": "August 2021"
   },
