Apply suggestions from code review
Co-authored-by: Chris Needham <chrisn@users.noreply.github.com>

--- a/hevc_codec_registration.src.html
+++ b/hevc_codec_registration.src.html
@@ -2,7 +2,7 @@
 Title: HEVC (H.265) WebCodecs Registration
 Repository: w3c/webcodecs
 Status: NOTE-ED
-Shortname: webcodecs-avc-codec-registration
+Shortname: webcodecs-hevc-codec-registration
 Level: none
 Group: mediawg
 ED: https://w3c.github.io/webcodecs/hevc_codec_registration.html
@@ -87,7 +87,7 @@ If the bitstream is in {{HevcBitstreamFormat/hevc}} format,
 defined in [[iso14496-15]] section 8.3.2.
 
 If the bitstream is in {{HevcBitstreamFormat/annexb}} format,
-[=EncodedVideoChunk/[[internal data]]=] is assumed to be in in Annex B format,
+[=EncodedVideoChunk/[[internal data]]=] is assumed to be in Annex B format,
 as defined in [[ITU-T-REC-H.264]] Annex B.
 
 NOTE: Since [=EncodedVideoChunk/[[internal data]]=] is inherently byte-aligned,
