--- a/index.src.html
+++ b/index.src.html
@@ -2410,7 +2410,7 @@ AudioData Interface {#audiodata-interface}
 [Exposed=(Window,DedicatedWorker), Serializable, Transferable]
 interface AudioData {
   constructor(AudioDataInit init);
-  constructor(AudioData source, AudioDataCopyInit init);
+  constructor(AudioData source, optional AudioDataCopyInit init = {});
 
   readonly attribute AudioSampleFormat? format;
   readonly attribute float sampleRate;
@@ -2435,7 +2435,7 @@ dictionary AudioDataInit {
 };
 
 dictionary AudioDataCopyInit {
-  [EnforceRange] required long long timestamp;  // microseconds
+  [EnforceRange] long long timestamp;  // microseconds
 };
 </xmp>
 
@@ -2490,7 +2490,9 @@ dictionary AudioDataCopyInit {
 </dfn>
 1. If |source|.{{platform object/[[Detached]]}} is `true`, throw an
     {{InvalidStateError}} {{DOMException}}.
-2. Let |copy| be a new {{AudioData}} object, initialized as follows:
+2. If |init|.{{AudioDataCopyInit/timestamp}} does not [=map/exist=],
+    return |source|.{{AudioData/clone()}}.
+3. Let |copy| be a new {{AudioData}} object, initialized as follows:
     1. Assign `false` to {{platform object/[[Detached]]}}.
     2. Assign |source|.{{AudioDataInit/format}} to
         {{AudioData/[[format]]}}.
@@ -2500,13 +2502,13 @@ dictionary AudioDataCopyInit {
         {{AudioData/[[number of frames]]}}.
     5. Assign |source|.{{AudioDataInit/numberOfChannels}} to
         {{AudioData/[[number of channels]]}}.
-    6. Assign |init|.{{AudioDataInit/timestamp}} to
+    6. Assign |init|.{{AudioDataCopyInit/timestamp}} to
         {{AudioData/[[timestamp]]}}.
     7. Let |resource| be a [=media resource=] containing a copy of
         |source|.{{AudioDataInit/data}}.
     8. Let |resourceReference| be a reference to |resource|.
     9. Assign |resourceReference| to {{AudioData/[[resource reference]]}}.
-3. Return |copy|.
+4. Return |copy|.
 
 ### Attributes ###{#audiodata-attributes}
 
