Fix dictionnary references

--- a/index.src.html
+++ b/index.src.html
@@ -2494,18 +2494,19 @@ dictionary AudioDataCopyInit {
     return |source|.{{AudioData/clone()}}.
 3. Let |copy| be a new {{AudioData}} object, initialized as follows:
     1. Assign `false` to {{platform object/[[Detached]]}}.
-    2. Assign |source|.{{AudioDataInit/format}} to
+    2. Assign |source|.{{AudioData/[[format]]}} to
         {{AudioData/[[format]]}}.
-    3. Assign |source|.{{AudioDataInit/sampleRate}} to
+    3. Assign |source|.{{AudioData/[[sample rate]]}} to
         {{AudioData/[[sample rate]]}}.
-    4. Assign |source|.{{AudioDataInit/numberOfFrames}} to
+    4. Assign |source|.{{AudioData/[[number of frames]]}} to
         {{AudioData/[[number of frames]]}}.
-    5. Assign |source|.{{AudioDataInit/numberOfChannels}} to
+    5. Assign |source|.{{AudioData/[[number of channels]]}} to
         {{AudioData/[[number of channels]]}}.
     6. Assign |init|.{{AudioDataCopyInit/timestamp}} to
         {{AudioData/[[timestamp]]}}.
-    7. Let |resource| be a [=media resource=] containing a copy of
-        |source|.{{AudioDataInit/data}}.
+    7. Let |resource| be a [=media resource=] containing a copy of the
+        [=media resource=] referenced by
+        |source|.{{AudioData/[[resource reference]]}}.
     8. Let |resourceReference| be a reference to |resource|.
     9. Assign |resourceReference| to {{AudioData/[[resource reference]]}}.
 4. Return |copy|.
