Add missing AudoiDecoder slot init

--- a/index.src.html
+++ b/index.src.html
@@ -366,17 +366,19 @@ Constructors {#audiodecoder-constructors}
   AudioDecoder(init)
 </dfn>
 1. Let d be a new {{AudioDecoder}} object.
-2. Assign `null` to {{AudioDecoder/[[codec implementation]]}}.
+2. Assign a new [=queue=] to {{AudioDecoder/[[control message queue]]}}.
 3. Assign `false` to {{AudioDecoder/[[message queue blocked]]}}.
-4. Assign the result of starting a new [=parallel queue=] to {{AudioDecoder/[[codec work queue]]}}.
-5. Assign `false` to {{AudioDecoder/[[codec saturated]]}}.
-6. Assign init.output to {{AudioDecoder/[[output callback]]}}.
-7. Assign init.error to {{AudioDecoder/[[error callback]]}}.
-8. Assign `true` to {{AudioDecoder/[[key chunk required]]}}.
-9. Assign `"unconfigured"` to {{AudioDecoder/[[state]]}}
-10. Assign `0` to {{AudioDecoder/[[decodeQueueSize]]}}.
-11. Assign a new [=list=] to {{AudioDecoder/[[pending flush promises]]}}.
-12. Return d.
+4. Assign `null` to {{AudioDecoder/[[codec implementation]]}}.
+5. Assign the result of starting a new [=parallel queue=] to
+    {{AudioDecoder/[[codec work queue]]}}.
+6. Assign `false` to {{AudioDecoder/[[codec saturated]]}}.
+7. Assign init.output to {{AudioDecoder/[[output callback]]}}.
+8. Assign init.error to {{AudioDecoder/[[error callback]]}}.
+9. Assign `true` to {{AudioDecoder/[[key chunk required]]}}.
+10. Assign `"unconfigured"` to {{AudioDecoder/[[state]]}}
+11. Assign `0` to {{AudioDecoder/[[decodeQueueSize]]}}.
+12. Assign a new [=list=] to {{AudioDecoder/[[pending flush promises]]}}.
+13. Return d.
 
 Attributes {#audiodecoder-attributes}
 -------------------------------------
