Transition VideoFrame to new model

--- a/index.src.html
+++ b/index.src.html
@@ -3546,7 +3546,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
                     [=computed plane layout/destinationStride=].
                 4. Increment |row| by `1`.
             9. Increment |planeIndex| by `1`.
-        5. Queue a task on the [=control thread=] event loop to resolve |p|.
+        5. [=Queue a task=] to resolve |p|.
     9. Return |p|.
 
 : <dfn method for=VideoFrame>clone()</dfn>
