--- a/index.src.html
+++ b/index.src.html
@@ -3889,7 +3889,8 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
 
             1. Assign |minAllocationSize| to |computedLayout|'s
                 [=computed plane layout/destinationOffset=].
-            2. Assign |computedLayout|'s [=computed plane layout/sourceWidthBytes=] to
+            2. Assign |computedLayout|'s
+                [=computed plane layout/sourceWidthBytes=] to
                 |computedLayout|'s [=computed plane layout/destinationStride=].
         13. Let |planeSize| be the product of multiplying |computedLayout|'s
                 [=computed plane layout/destinationStride=] and
