Add missing biblio entry to HEVC registration

--- a/hevc_codec_registration.src.html
+++ b/hevc_codec_registration.src.html
@@ -53,6 +53,12 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
 
 <pre class='biblio'>
 {
+  "ITU-T-REC-H.264": {
+    "href": "https://www.itu.int/rec/T-REC-H.264",
+    "title": "H.264 : Advanced video coding for generic audiovisual services",
+    "publisher": "ITU",
+    "date": "June 2019"
+  },
   "ITU-T-REC-H.265": {
     "href": "https://www.itu.int/rec/T-REC-H.265",
     "title": "H.265 : High efficiency video coding",
