Cleanup for audio_video_player sample

--- a/samples/audio-video-player/audio_video_player.html
+++ b/samples/audio-video-player/audio_video_player.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <style>
   body {
-    background-color: black;
-    color: white;
     font-family: sans-serif;
+    color: #444;
+    font-weight: 300;
+    font-size:  larger;
+  }
+  button {
+    font-size: larger;
   }
   #controls {
     margin-bottom: 10px;
@@ -11,15 +15,39 @@
   #loading {
     font-size: 2em;
   }
+  div#container {
+    margin: 0 auto 0 auto;
+    max-width: 60em;
+    padding: 1em 1.5em 1.3em 1.5em;
+  }
+  canvas {
+    outline: 1px solid black;
+  }
 </style>
-<div id=controls>
-  <div id=loading>Loading...</div>
-  <button disabled=true>Play</button>
-  <label for=volume>Volume</label>
-  <input id=volume type=range value=0.8 min=0 max=1.0 step=0.01></input>
+<div id=container>
+  <div id=controls>
+    <p id=loading>Loading...</p>
+    <button disabled=true>Play</button>
+    <label for=volume>Volume</label>
+    <input id=volume type=range value=0.8 min=0 max=1.0 step=0.01></input>
+  </div>
+  <canvas width=1280 height=720></canvas>
+  <p>
+    This sample combines WebCodecs and WebAudio to create a media player that
+    renders synchronized audio and video.
+  </p>
+  <p>
+    Check out the <a href='../mp4-decode/'>MP4 decode</a> demo for a simpler
+    introduction to video decoding and rendering. View
+    <a href='https://youtu.be/U8T5U8sN5d4?t=1572'>this video presentation</a>
+    for an overview of audio rendering stack.
+  </p>
+  <p>
+    This sample requires <a href='https://web.dev/cross-origin-isolation-guide'>
+    cross origin isolation</a> to use `SharedArrayBuffer`. You may use `node
+    server.js` to host this sample locally with the appropriate HTTP headers.
+  </p>
 </div>
-<canvas></canvas>
-
 <script type="module">
 import { WebAudioController } from "./web_audio_controller.js";
 
