Move/rename mp4-decode sample

--- a/samples/audio-video-player/audio_video_player.html
+++ b/samples/audio-video-player/audio_video_player.html
@@ -33,8 +33,8 @@
     renders synchronized audio and video.
   </p>
   <p>
-    Check out the <a href='../mp4-decode/'>MP4 decode</a> demo for a simpler
-    introduction to video decoding and rendering. View
+    Check out the <a href='../video-decode-display/'>Video Decoding and Display
+    </a> demo for a simpler introduction to video decoding and rendering. View
     <a href='https://youtu.be/U8T5U8sN5d4?t=1572'>this video presentation</a>
     for an overview of audio rendering stack.
   </p>
