--- a/samples/index.html
+++ b/samples/index.html
@@ -11,8 +11,8 @@
   <div id="header"><h1><a href="../">WebCodecs API</a></h1></div>
   <div id="wrapper">
     <div id="content">
-      <article onclick="window.location.href='./mp4-decode/';">
-        <h1><a href="./mp4-decode/">Video Decoding and Display</a></h1>
+      <article onclick="window.location.href='./video-decode-display/';">
+        <h1><a href="./video-decode-display/">Video Decoding and Display</a></h1>
         <p>Demuxes (using mp4box.js) and decodes an mp4 file, paints to canvas ASAP</p>
       </article>
       <article onclick="window.location.href='./audio-video-player/audio_video_player.html';">
