--- a/samples/audio-video-player/audio_video_player.html
+++ b/samples/audio-video-player/audio_video_player.html
@@ -66,8 +66,8 @@ let offscreenCanvas = canvas.transferControlToOffscreen();
 // house and drive the demuxers and decoders.
 let mediaWorker = new Worker('./media_worker.js');
 mediaWorker.postMessage({command: 'initialize',
-                         audioFile: 'bbb_audio_aac_frag.mp4',
-                         videoFile: 'bbb_video_avc_frag.mp4',
+                         audioFile: '../data/bbb_audio_aac_frag.mp4',
+                         videoFile: '../data/bbb_video_avc_frag.mp4',
                          canvas: offscreenCanvas},
                         {transfer: [offscreenCanvas]});
 
