Fix visible rect comparison to use strict equality to allow for visible rect of the same size as coded size
This fixes #515.

--- a/index.src.html
+++ b/index.src.html
@@ -3683,10 +3683,10 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
             {{VideoFrameInit/visibleRect}}.{{DOMRectInit/height}} == `0` return
             `false`.
         5. If {{VideoFrameInit/visibleRect}}.{{DOMRectInit/y}} +
-            {{VideoFrameInit/visibleRect}}.{{DOMRectInit/height}} >=
+            {{VideoFrameInit/visibleRect}}.{{DOMRectInit/height}} >
             |codedHeight|, return `false`.
         6. If {{VideoFrameInit/visibleRect}}.{{DOMRectInit/x}} +
-            {{VideoFrameInit/visibleRect}}.{{DOMRectInit/width}} >=
+            {{VideoFrameInit/visibleRect}}.{{DOMRectInit/width}} >
             |codedWidth|, return `false`.
     2. If |codedWidth| = 0 or |codedHeight| = 0,return `false`.
     3. If only one of {{VideoFrameInit/displayWidth}} or
@@ -3702,10 +3702,10 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
     2. If any attribute of {{VideoFrameBufferInit/visibleRect}} is negative or
         not finite, return `false`.
     3. If {{VideoFrameBufferInit/visibleRect}}.{{DOMRectInit/y}} +
-        {{VideoFrameBufferInit/visibleRect}}.{{DOMRectInit/height}} >=
+        {{VideoFrameBufferInit/visibleRect}}.{{DOMRectInit/height}} >
         {{VideoFrameBufferInit/codedHeight}}, return `false`.
     4. If {{VideoFrameBufferInit/visibleRect}}.{{DOMRectInit/x}} +
-        {{VideoFrameBufferInit/visibleRect}}.{{DOMRectInit/width}} >=
+        {{VideoFrameBufferInit/visibleRect}}.{{DOMRectInit/width}} >
         {{VideoFrameBufferInit/codedWidth}}, return `false`.
     5. If only one of {{VideoFrameBufferInit/displayWidth}} or
         {{VideoFrameBufferInit/displayHeight}} [=map/exists=], return `false`.
