Split the privacy and security considerations sections in the registry entries and the registry document
This fixes #544.

--- a/aac_codec_registration.src.html
+++ b/aac_codec_registration.src.html
@@ -169,9 +169,14 @@ NOTE: Once the initialization has succeeded, any AAC packet can be decoded at
         and therefore no {{AudioDecoderConfig.description}} is necessary.
     </dl>
 
-Privacy and Security Considerations {#privacy-and-security-considerations}
+Privacy Considerations {#privacy-considerations}
 ==========================================================================
 
-Please refer to the [[WEBCODECS#privacy-considerations|Privacy Considerations]]
-and [[WEBCODECS#security-considerations|Security Considerations]] sections in
-[[WEBCODECS]].
+Please refer to the section [[WEBCODECS#privacy-considerations|Privacy
+Considerations]] in [[WEBCODECS]].
+
+Security Considerations {#security-considerations}
+==========================================================================
+
+Please refer to the section [[WEBCODECS#security-considerations|Security
+Considerations]] in [[WEBCODECS]].
