--- a/alaw_codec_registration.src.html
+++ b/alaw_codec_registration.src.html
@@ -82,9 +82,14 @@ EncodedAudioChunk type {#encodedaudiochunk-type}
 The [=EncodedAudioChunk/[[type]]=] for an {{EncodedAudioChunk}} containing
 A-law PCM is always "[=EncodedAudioChunkType/key=]".
 
-Privacy and Security Considerations {#privacy-and-security-considerations}
+Privacy Considerations {#privacy-considerations}
 ==========================================================================
 
-Please refer to the [[WEBCODECS#privacy-considerations|Privacy Considerations]]
-and [[WEBCODECS#security-considerations|Security Considerations]] sections in
-[[WEBCODECS]].
+Please refer to the section [[WEBCODECS#privacy-considerations|Privacy
+Considerations]] in [[WEBCODECS]].
+
+Security Considerations {#security-considerations}
+==========================================================================
+
+Please refer to the section [[WEBCODECS#security-considerations|Security
+Considerations]] in [[WEBCODECS]].
