--- a/av1_codec_registration.src.html
+++ b/av1_codec_registration.src.html
@@ -91,9 +91,14 @@ If an {{EncodedVideoChunk}}'s [=EncodedVideoChunk/[[type]]=] is
 contain a frame with a `frame_type` of `KEY_FRAME` as defined in Section
 6.8.2 of [[AV1]].
 
-Privacy and Security Considerations {#privacy-and-security-considerations}
+Privacy Considerations {#privacy-considerations}
 ==========================================================================
 
-Please refer to the [[WEBCODECS#privacy-considerations|Privacy Considerations]]
-and [[WEBCODECS#security-considerations|Security Considerations]] sections in
-[[WEBCODECS]].
+Please refer to the section [[WEBCODECS#privacy-considerations|Privacy
+Considerations]] in [[WEBCODECS]].
+
+Security Considerations {#security-considerations}
+==========================================================================
+
+Please refer to the section [[WEBCODECS#security-considerations|Security
+Considerations]] in [[WEBCODECS]].
