--- a/vp8_codec_registration.src.html
+++ b/vp8_codec_registration.src.html
@@ -83,9 +83,14 @@ If an {{EncodedVideoChunk}}'s [=EncodedVideoChunk/[[type]]=] is
 {{EncodedVideoChunkType/key}}, then the {{EncodedVideoChunk}} is expected to
 contain a frame where `key_frame` is true as defined in Section 19.1 of [[VP8]].
 
-Privacy and Security Considerations {#privacy-and-security-considerations}
+Privacy Considerations {#privacy-considerations}
 ==========================================================================
 
-Please refer to the [[WEBCODECS#privacy-considerations|Privacy Considerations]]
-and [[WEBCODECS#security-considerations|Security Considerations]] sections in
-[[WEBCODECS]].
+Please refer to the section [[WEBCODECS#privacy-considerations|Privacy
+Considerations]] in [[WEBCODECS]].
+
+Security Considerations {#security-considerations}
+==========================================================================
+
+Please refer to the section [[WEBCODECS#security-considerations|Security
+Considerations]] in [[WEBCODECS]].
