Add Acknowledgements - long overdue!

--- a/index.src.html
+++ b/index.src.html
@@ -5536,3 +5536,14 @@ Best Practices for Authors Using WebCodecs{#best-practices-developers}
   their target frame rates, main thread workload, how their application will be
   embedded, and the class of devices their users will be using.
 </div>
+
+Acknowledgements{#acknowledgements}
+===================================
+
+The editors would like to thank Alex Russell, Chris Needham, Dale Curtis, Dan
+Sanders, Eugene Zemtsov, Francois Daoust, Guido Urdaneta, Harald Alvestrand,
+Jan-Ivar Bruaroey, Jer Noble, Mark Foltz, Peter Thatcher, Steve Anton, Matt
+Wolenetz, Rijubrata Bhaumik, Thomas Guilbert, Tuukka Toivonen, and Youenn Fablet
+for their contributions to this specification. Thank you also to the many
+others who contributed to the specification, including through their
+participation on the mailing list and in the issues.
