Remove duplicate ringbufjs

--- a/samples/ffmpeg-wasm-demuxer/wasm_demuxer_demo.html
+++ b/samples/ffmpeg-wasm-demuxer/wasm_demuxer_demo.html
@@ -511,7 +511,7 @@
     <p>
       <a href='https://github.com/padenot/ringbuf.js'>ringbuf.js</a> is
       licensed under the
-      <a href='./third_party/ringbufjs/LICENSE'>Mozilla Public License 2.0</a>.
+      <a href='../third_party/ringbufjs/LICENSE'>Mozilla Public License 2.0</a>.
     </p>
   </section>
   <section>
