Add wasm demuxer to index.html

--- a/samples/index.html
+++ b/samples/index.html
@@ -27,6 +27,10 @@
         <h1><a href="./capture-to-file/capture-to-file.html">Capture To File</a></h1>
         <p>Reading from camera, encoding via webcodecs, and creating a webm file on disk.</p>
       </article>
+      <article onclick="window.location.href='./ffmpeg-wasm-demuxer/wasm_demuxer_demo.html';">
+        <h1><a href="./ffmpeg-wasm-demuxer/wasm_demuxer_demo.html">FFmpeg WASM Demuxer</a></h1>
+        <p>Demuxes an MP4 file using FFmpeg compiled to WASM. Includes detailed instructions on WASM compilation.</p>
+      </article>
     </div>
   </div>
 </div>
