--- a/samples/ffmpeg-wasm-demuxer/wasm_demuxer_demo.html
+++ b/samples/ffmpeg-wasm-demuxer/wasm_demuxer_demo.html
@@ -426,7 +426,7 @@
     The audio rendering features of this demo requires <a href='https://web.dev/cross-origin-isolation-guide/'>cross origin isolation</a> to use <a href='https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/SharedArrayBuffer'>SharedArrayBuffer</a>. Use the provided <a href='../server.js'>server.js</a> node script to serve the files with the required http headers for local testing (requires <a href='https://nodejs.org'>node.js</a>).
   </p>
   <p class='code'>
-    node sever.js
+    node server.js
   </p>
 </section>
 <section>
@@ -538,7 +538,9 @@
       </a>
     </li>
     <li>
-      <a href='https://itnext.io/build-ffmpeg-webassembly-version-ffmpeg-js-part-1-preparation-ed12bf4c8fac'>https://emscripten.org/docs/compiling/Building-Projects.html#building-projects</a>
+      <a href='https://itnext.io/build-ffmpeg-webassembly-version-ffmpeg-js-part-1-preparation-ed12bf4c8fac'>
+        https://itnext.io/build-ffmpeg-webassembly-version-ffmpeg-js-part-1-preparation-ed12bf4c8fac
+      </a>
     </li>
     <li>
       <a href='https://github.com/Yahweasel/libav.js/'>https://github.com/Yahweasel/libav.js/</a>
